test/resources/valid/ValidBooleanArray.flo
action STUB_ACTION = stub();

flow MY_FLOW = {
    boolean[] myBooleanArray = [false, true, false];
    STUB_ACTION >> myBooleanArray;
}
