test/resources/invalid/typecheck/InvalidBooleanArray.flo
action STUB_ACTION = stub();

flow MY_FLOW = {
    boolean[] myBooleanArray = [false, true, 4];
    STUB_ACTION >> myBooleanArray;
}
